Bug 187885 - automatic charset detection doesn't work
Summary: automatic charset detection doesn't work
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-22 22:03 UTC by Arkadiusz Miskiewicz
Modified: 2009-08-10 23:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arkadiusz Miskiewicz 2009-03-22 22:03:55 UTC
Version:            (using KDE 4.2.1)
OS:                Linux
Installed from:    Unlisted Binary Package

I have view->charset set to auto but knode doesn't properly detect encoding for iso8859-2 characters (don't know about others).

How to reproduce - set charset to auto and try to view posts on Polish groups (pl.* hierarchy).

Don't look at subject, look at body posts (subject handling can be considered "broken" - see #179703).

Some posts at pl.* hierarchy use iso8859-2 or cp1250 encoding but don't specify that in headers. Unfortunately "auto" charset isn't able to guess that.

Example message-id gq5ooe$3mc$1@nemesis.news.neostrada.pl , choosing view->charset iso8859-2 manually causes the post to be displayed correctly, so the fault really seem to be in "auto" mode.
Comment 1 Olivier Trichet 2009-08-10 23:08:00 UTC
SVN commit 1009797 by otrichet:

Rename "Automatic" to "Default" in the list of charset

Nowadays system are using UTF-8 by default (not legacy encoding like
ISO-8859-15 or KOI8-R) and using the system-wide charset is just
misleading users. So we use "Default" not to imply there is some
automatic detection of a missing charset.

BUG: 187885

 M  +4 -4      articlewidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1009797