Rename "Automatic" to "Default" in the list of charset

Nowadays system are using UTF-8 by default (not legacy encoding like
ISO-8859-15 or KOI8-R) and using the system-wide charset is just
misleading users. So we use "Default" not to imply there is some
automatic detection of a missing charset.

BUG: 187885

svn path=/trunk/KDE/kdepim/knode/; revision=1009797